# bevy_shuftle-client

./: Cargo.toml  flake.nix  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
src/: camera.rs  game_logic.rs  main.rs
wasm/: index.html
