[package]
name = "shuftle-client-core"
version = "0.2.1"
edition = "2024"
authors = ["Sebastiano Giordano"]
categories = ["game-development"]
description = "A collection of classical card games"
keywords = ["cards", "card_games"]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/shuftle/shuftle-client"

[lib]
path = "src/lib.rs"

[[bin]]
name = "shuftle"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.18", features = ["dynamic_linking", "bevy_picking"] }
shuftlib = "0.3"
strum = { version = "0.28", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
